# openwebui-sync

./: .gitignore  LICENSE  README.md  pyproject.toml
openwebui_watcher/: cli.py
openwebui_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
